[gd_scene load_steps=21 format=2]

[ext_resource path="res://Assets/Characters/Enemy/Sounds/DeadHit.ogg" type="AudioStream" id=1]
[ext_resource path="res://Assets/Characters/Enemy/Scipts/Enemy.gd" type="Script" id=9]
[ext_resource path="res://Assets/Characters/Enemy/Sprites/Pink Star/02-Run/Run 04.png" type="Texture" id=10]
[ext_resource path="res://Assets/Characters/Enemy/Sprites/Pink Star/02-Run/Run 02.png" type="Texture" id=11]
[ext_resource path="res://Assets/Characters/Enemy/Sprites/Pink Star/02-Run/Run 03.png" type="Texture" id=12]
[ext_resource path="res://Assets/Characters/Enemy/Sprites/Pink Star/02-Run/Run 01.png" type="Texture" id=13]
[ext_resource path="res://Assets/Characters/Enemy/Sprites/Pink Star/02-Run/Run 05.png" type="Texture" id=14]
[ext_resource path="res://Assets/Characters/Enemy/Sprites/Pink Star/02-Run/Run 06.png" type="Texture" id=15]
[ext_resource path="res://Assets/Characters/Enemy/Sprites/Pink Star/09-Dead Hit/Dead Hit 04.png" type="Texture" id=16]
[ext_resource path="res://Assets/Characters/Enemy/Sprites/Pink Star/09-Dead Hit/Dead Hit 03.png" type="Texture" id=17]
[ext_resource path="res://Assets/Characters/Enemy/Sprites/Pink Star/09-Dead Hit/Dead Hit 02.png" type="Texture" id=18]
[ext_resource path="res://Assets/Characters/Enemy/Sprites/Pink Star/09-Dead Hit/Dead Hit 01.png" type="Texture" id=19]
[ext_resource path="res://Assets/Characters/Enemy/Sprites/Pink Star/08-Hit/Hit 02.png" type="Texture" id=20]
[ext_resource path="res://Assets/Characters/Enemy/Sprites/Pink Star/08-Hit/Hit 01.png" type="Texture" id=21]
[ext_resource path="res://Assets/Characters/Enemy/Sprites/Pink Star/08-Hit/Hit 03.png" type="Texture" id=22]
[ext_resource path="res://Assets/Characters/Enemy/Sprites/Pink Star/08-Hit/Hit 04.png" type="Texture" id=23]

[sub_resource type="Animation" id=1]
resource_name = "Dead Hit"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 19 ), ExtResource( 18 ), ExtResource( 17 ), ExtResource( 16 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 4 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Hit"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 21 ), ExtResource( 20 ), ExtResource( 22 ), ExtResource( 23 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 0.27451 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Run"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 13 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 10 ), ExtResource( 14 ), ExtResource( 15 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="CapsuleShape2D" id=4]
radius = 8.5
height = 3.0

[node name="Enemy" type="KinematicBody2D" groups=[
"Enemy",
]]
script = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 13 )
flip_h = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
"anims/Dead Hit" = SubResource( 1 )
anims/Hit = SubResource( 2 )
anims/Run = SubResource( 3 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, 3 )
shape = SubResource( 4 )

[node name="Raycast" type="Position2D" parent="."]

[node name="Ground" type="RayCast2D" parent="Raycast"]
position = Vector2( 10, 0 )
enabled = true
cast_to = Vector2( 0, 18 )

[node name="SoundDead" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )
volume_db = -16.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_started" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_started"]
